change all routing

--- a/master/احراز هویت کاربران.md
+++ b/master/احراز هویت کاربران.md
@@ -9,7 +9,7 @@
 
 ## مقدمه
 
-**تمام امکانات احراز هویت در پکیج sso قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات احراز هویت در پکیج sso قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 این سامانه بر اساس استاندارد OAuth2.0 پیاده سازی شده است بنابراین جهت استفاده از سرویس های پلتفرم بایستی بر اساس این استاندارد جهت ورود کاربران و دریافت توکن استفاده کنیم. روش کلی به این صورت است که برای ورود کاربر، وی را به صفحه ورود سرور SSO راهنمایی میکنیم و پس از ورود کاربر، کد مربوط به کاربر به آدرس تعریف شده توسط کسب و کار ارسال می گردد. سپس با ارسال کد دریافت شده به سرور sso توکن دسترسی کاربر در یافت می شود پس از دریافت توکن، میتوان از آن برای صدازدن سایر سرویس های پلتفرم استفاده نمود و یا اطلاعات پروفایل کاربر را دریافت و ویرایش نمود.
 
@@ -1281,11 +1281,11 @@ podSSOService.getTokenInfo(getTokenInfoData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
