--- a/master/اعلانات.md
+++ b/master/اعلانات.md
@@ -105,11 +105,11 @@
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
