--- a/master/برداشت مستقیم.md
+++ b/master/برداشت مستقیم.md
@@ -8,7 +8,7 @@
 
 ## مقدمه
 
-** تمام امکانات برداشت از حساب بانکی در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+** تمام امکانات برداشت از حساب بانکی در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 در صورت نیاز به افزایش موجودی حساب کسب و کار، به صورت منظم می توان بجای ورود به پنل و شارژ از طریق درگاه بانکی، مجوز برداشت از حساب بانکی را فعال نمود. این مجوز دو نوع است ولی در هر صورت حساب مبدا باید در بانک پاسارگاد باشد:
 
@@ -643,11 +643,11 @@ podBillingService.revokeDirectWithdraw(revokeDirectWithdrawData )
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
