--- a/master/تسویه.md
+++ b/master/تسویه.md
@@ -10,7 +10,7 @@
 
 ## مقدمه
 
-** تمام امکانات تسویه در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+** تمام امکانات تسویه در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 کسب و کار می تواند با استفاده از API زیر درخواست انتقال وجه قابل تسویه موجود در حساب مجازی خود را بدهد. عملیات تسویه از طریق پنل نیز قابل انجام و پیگیری می باشد. همچنین میتوانید از طریق پنل کسب و کار خود یا وب سرویس برای یک حساب صنفی خاص یا کیف پول، تسویه اتوماتیک را فعال نمایید. به این ترتیب پایان هر شب مبلغ قابل تسویه موجود در آن حساب، به شماره شبای ثبت شده واریز می گردد.
 
@@ -964,11 +964,11 @@ podBilling.removeAutoSettlement(removeAutoSettlementData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
