--- a/master/طرح های اشتراک.md
+++ b/master/طرح های اشتراک.md
@@ -12,7 +12,7 @@
 
 ## مقدمه
 
-**تمام امکانات طرح‌های اشتراکی در پکیج subscription قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات طرح‌های اشتراکی در پکیج subscription قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 در مواردی ممکن است کسب و کار اقدام به فروش محصولات کسب و کار دیگر نماید یا به هر دلیلی بخشی از مبلغ دریافتی به یک یا چند کسب و کار دیگر تعلق داشته باشد. اهمیت این موضوع در امور مالیاتی مشهود و راه حل آن بسیار ضروری است.برای پرداخت کردن فاکتور ها روش های متفاوتی وجود دارد، که می توان با استفاده از این روش ها فاکتور را پرداخت کرد:توسط سرویس های " ایجاد و مدیریت طرح های اشتراکی " که  در ادامه توضیح داده خواهد شد کسب و کار و مشتریان میتوانند از بسترها و سرویس های یکدیگر بر اساس قوانینی که قابل مدیریت و تعریف شدن میباشد استفاده نمایند و در صورت لزوم مبالغی نیز در ازای استفاده از این امکانات پرداخت نمایند.
 
@@ -1190,11 +1190,11 @@ podSubscription.consumeSubscription(consumeSubscriptionData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
