--- a/master/فاکتور تسهیمی.md
+++ b/master/فاکتور تسهیمی.md
@@ -9,7 +9,7 @@
 
 ## مقدمه
 
-**تمام امکانات تسهیم و فروش در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات تسهیم و فروش در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 در مواردی ممکن است کسب و کار اقدام به فروش محصولات کسب و کار دیگر نماید یا به هر دلیلی بخشی از مبلغ دریافتی به یک یا چند کسب و کار دیگر تعلق داشته باشد. اهمیت این موضوع در امور مالیاتی مشهود و راه حل آن بسیار ضروری است.
 
@@ -1150,11 +1150,11 @@ podBilling.reduceMultiInvoiceAndCashOut(reduceMultiInvoiceAndCashOutData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
