--- a/master/محصولات.md
+++ b/master/محصولات.md
@@ -13,7 +13,7 @@
 
 ## مقدمه
 
-**تمام امکانات برای محصول از جمله ثبت محصول و ... در پکیج product قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات برای محصول از جمله ثبت محصول و ... در پکیج product قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 محصولات در پلتفرم کسب و کاری، این امکان را برای کسب و کارها به وجود می آورند که بدون نیاز به نگهداری اطلاعات محصولات و مدیریت موجودی هنگام فروش، با امکانات گسترده ای جهت جستجو، نمایش، خرید و اجاره محصولات بتوانند عملیات مختص کسب و کار خود را از یک قدم جلوتر آغاز نمایند.
 
@@ -2480,11 +2480,11 @@ podProduct.searchSubProduct(searchSubProductData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
