--- a/master/کارگزاری.md
+++ b/master/کارگزاری.md
@@ -8,7 +8,7 @@
 
 ## مقدمه
 
-** تمام امکانات کارگزاری در پکیج Dealing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+** تمام امکانات کارگزاری در پکیج Dealing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 کسب و کار ها می توانند کسب و کارهای دیگری را که با آن ها همکاری دارند ثبت نام کنند. این امکان برای کارگزاران و کسب و کارهایی که به تسهیم درآمد نیاز دارند بسیار مفید است. همچنین کاربران می توانند کسب و کارها را دنبال کنند، به آن ها امتیاز دهند
 
@@ -2683,11 +2683,11 @@ podDealingService.unconfirmComment(unconfirmCommentData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
