--- a/master/ابزار.md
+++ b/master/ابزار.md
@@ -6,7 +6,7 @@
 
 ## مقدمه
 
-** تمام امکانات پرداخت و دریافت قیوض در پکیج tools قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+** تمام امکانات پرداخت و دریافت قیوض در پکیج tools قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 
 <div class="box-end">
@@ -313,11 +313,11 @@ podTools.payedBillList(payedBillListData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
