--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -10,7 +10,7 @@
 
 ## مقدمه
 
-** تمام امکانات بن تخفیف در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+** تمام امکانات بن تخفیف در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 <div class="box-end">
 </div>
@@ -1319,11 +1319,11 @@ $param =
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
