--- a/master/خرید(فاکتور).md
+++ b/master/خرید(فاکتور).md
@@ -17,7 +17,7 @@
 
 ## خرید در یک نگاه
 
-**تمام امکانات عملیات خرید در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات عملیات خرید در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 خرید فعالیتی است که مشتری، محصول یا خدماتی را که توسط کسب‌و‌کاری ارائه شده است را جستجو و در ازای پرداخت هزینه استفاده می‌کند. در خرید آنلاین، فرآیند جستجو، تعامل فروشنده و مشتری، پرداخت و رهگیری در بستر شبکه اینترنت انجام می‌شود. مراحل خرید پس از انتخاب محصول توسط مشتری تا اتمام فرآیند توسط فروشنده به طور اجمالی شامل این مراحل است.
 
@@ -2041,11 +2041,11 @@ K((پایان))
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
