--- a/master/سرویس های پایه.md
+++ b/master/سرویس های پایه.md
@@ -15,7 +15,7 @@
 
 ## مقدمه
 
-**تمام امکانات سرویس‌های پایه در پکیج baseService قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](app/documents/packages/) مراجعه کنید**
+**تمام امکانات سرویس‌های پایه در پکیج baseService قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 <br/>
 
@@ -1329,11 +1329,11 @@ podCommon.updateTagTree(updateTagTreeData)
 
 ## لینک‌های مرتبط
 
-- [مقدمه](/app/documents/introduction/)
-- [مفاهیم](/app/documents/concepts/)
-- [استاندارد و خطاها](/app/documents/errors/)
-- [شروع به کار](/app/documents/get-started/)
-- [پکیج‌ها](/app/documents/packages/)
+- [مقدمه](/documents/introduction/)
+- [مفاهیم](/documents/concepts/)
+- [استاندارد و خطاها](/documents/errors/)
+- [شروع به کار](/documents/get-started/)
+- [پکیج‌ها](/documents/packages/)
 
 <div class="box-end">
 </div>
